--- a/index-inlined copy.html
+++ b/index-inlined copy.html
@@ -39,11 +39,11 @@
                         <table role="presentation" style="width:100%;border:0;border-spacing:0;">
 
                             <tr>
-                                <td style="padding:10px;text-align:center;">
-                                    <h1 style="margin-top:0;margin-bottom:16px;font-family:Arial,sans-serif;font-size:26px;line-height:32px;font-weight:bold;">Welcome!</h1><br>
-                                    <p class="main-text" style="margin: 0; font-family: Arial,sans-serif; font-size: 18px; line-height: 24px;">Your HOTEL/SPA, DAY SPA is reserved from:</p><br>
-                                    <p class="main-text red" style="margin: 0; font-family: Arial,sans-serif; font-size: 18px; line-height: 24px; color: #ff0000;">28 Mar, 2023, 14:20</p>
-                                    <p class="main-text red" style="margin: 0; font-family: Arial,sans-serif; font-size: 18px; line-height: 24px; color: #ff0000;">28 Mar, 2023, 23:00</p><br>
+                                <td style="padding: 10px; text-align: center; font-family: Arial,sans-serif">
+                                    <h1 style="margin-top:0;margin-bottom:16px;font-size:26px;line-height:32px;font-weight:bold;">Welcome!</h1><br>
+                                    <p style="margin: 0; font-size: 18px; line-height: 24px;">Your HOTEL/SPA, DAY SPA is reserved from:</p><br>
+                                    <p style="margin: 0; font-size: 18px; line-height: 24px; color: #ff0000;">28 Mar, 2023, 14:20</p>
+                                    <p style="margin: 0; font-size: 18px; line-height: 24px; color: #ff0000;">28 Mar, 2023, 23:00</p><br>
 
                                     <p class="main-text" style="margin: 0; font-family: Arial,sans-serif; font-size: 18px; line-height: 24px;">Present your QR code to gain access.</p><br><br>
 
@@ -54,10 +54,10 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td style="padding:10px;text-align:center;">
-                                    <p class="main-text" style="margin: 0; font-family: Arial,sans-serif; font-size: 14px; line-height: 20px;">Many thanks</p>
-                                    <p class="main-text" style="margin: 0; font-family: Arial,sans-serif; font-size: 14px; line-height: 20px;">HOTEL/SPA</p>
-                                    <p class="main-text" style="margin: 0; font-family: Arial,sans-serif; font-size: 14px; line-height: 20px;">+38651359034</p>
+                                <td style="padding: 10px; text-align: center; font-family: Arial,sans-serif; font-size: 14px; line-height: 20px;">
+                                    <p style="margin: 0;">Many thanks</p>
+                                    <p style="margin: 0;">HOTEL/SPA</p>
+                                    <p style="margin: 0;">+38651359034</p>
                                     <br>
 
                                 </td>
