--- a/easypin-email-inlined.html
+++ b/easypin-email-inlined.html
@@ -56,9 +56,9 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td style="padding:10px 10px 20px 10px;font-size:24px;line-height:28px;font-weight:bold;">
-                                    <img src="easypin-logo.png" width="200" alt="" style="width:17%;height:auto;">
-                                    <p style="margin:0; font-size:10px; line-height:18px; color:#ff0000;"><a href="https://example.com/" style="color:#ff0000; text-decoration:none">www.easypin.eu</a></p><br>
+                                <td style="padding:10px 10px 20px 10px;">
+                                    <img src="easypin-logo.png" width="108" height="36" alt="">
+                                    <p style="margin:0; font-size:10px; font-weight:bold; line-height:18px; color:#ff0000;"><a href="https://www.easypin.eu/" style="color:#ff0000; text-decoration:none">www.easypin.eu</a></p><br>
                                 </td>
                             </tr>
                         </table>
