--- a/easypin-email.html
+++ b/easypin-email.html
@@ -24,11 +24,11 @@
     <![endif]-->
 
 </head>
-<body style="margin:0;padding:0;word-spacing:normal;background-color:#ffffff;">
-    <div role="article" aria-roledescription="email" lang="en" style="-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;background-color:#ffffff;">
-        <table role="presentation" style="width:100%;border:0;border-spacing:0;">
+<body style="margin:0; padding:0; word-spacing:normal; background-color:#ffffff;">
+    <div role="article" aria-roledescription="email" lang="en" style="-webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; background-color:#ffffff;">
+        <table role="presentation" style="width:100%; border:0; border-spacing:0;">
             <tr>
-                <td align="center" style="text-align: center; font-family: Arial,sans-serif">
+                <td align="center" style="text-align:center; font-family:Arial,sans-serif">
                     <!--[if mso]>
                     <table role="presentation" align="center" style="width:660px;">
                     <tr>
@@ -37,21 +37,21 @@
                     <div class="outer" style="width:96%;max-width:660px;margin:20px auto;">
                         <table role="presentation" style="width:100%;border:0;border-spacing:0;">
                             <tr>
-                                <td style="padding:10px;">
-                                    <h1 style="margin-top:0;margin-bottom:16px;font-size:26px;line-height:32px;font-weight:bold;">Welcome!</h1><br>
-                                    <p style="margin:0; font-size:18px; line-height:24px;">Your HOTEL/SPA, DAY SPA is reserved from:</p><br>
-                                    <p style="margin:0; font-size:18px; line-height:24px; color:#ff0000;">28 Mar, 2023, 14:20</p>
-                                    <p style="margin:0; font-size:18px; line-height:24px; color:#ff0000;">28 Mar, 2023, 23:00</p><br>
-                                    <p style="margin:0; font-size:18px; line-height:24px;">Present your QR code to gain access.</p><br><br>
-                                    <p style="margin:0; font-size:13px;"><a href="https://example.com/" style="background: #ff0000; text-decoration: none; padding: 15px 25px; color: #ffffff; border-radius: 20px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">GET CODE</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
-                                    <br>
+                                <td style="padding:10px; font-size:18px; line-height:24px;">
+                                    <h1 style="margin:0 0 34px; font-size:26px; line-height:32px; font-weight:bold;">Welcome!</h1>
+                                    <p style="margin:0 0 18px;">Your HOTEL/SPA, DAY SPA is reserved from:</p>
+                                    <p style="margin:0; color:#ff0000;">28 Mar, 2023, 14:20</p>
+                                    <p style="margin:0 0 18px; color:#ff0000;">28 Mar, 2023, 23:00</p>
+                                    <p style="margin:0 0 36px;">Present your QR code to gain access.</p>
+                                    <p style="margin:0 0 18px; font-size: 13px; line-height:normal;"><a href="https://www.easypin.eu/" style="background: #ff0000; text-decoration: none; padding: 15px 25px; color: #ffffff; border-radius: 20px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">GET CODE</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
+
                                 </td>
                             </tr>
                             <tr>
                                 <td style="padding:10px; font-size:14px; line-height:20px;">
                                     <p style="margin:0; font-weight: bold;">Many thanks</p>
                                     <p style="margin:0;">HOTEL/SPA</p>
-                                    <p style="margin:0;">+38651359034</p>
+                                    <p style="margin:0;">+442034780786</p>
                                     <br>
                                 </td>
                             </tr>
